@@ -8,6 +8,8 @@
 - added: own implementation of `onFinished`
 - added: `RESTBuilder.cookies(obj)` can set cookies as raw object
 - added: `RESTBuilder.cook([true/false])` enables persistent cookies
+- added: `SchemaOptions.done([arg])` as a callback (contains wrapped SUCCESS())
+- added: `OperationOptions.done([arg])` as a callback (contains wrapped SUCCESS())
 
 - updated: `F.load()`, now supports `string` for `debug` or `release` mode
 - updated: `F.cluster.request()` can be executed from master process
